Fixed a spacing error in exercise 5

--- a/foundations/intro-to-css/05-descendant-combinator/style.css
+++ b/foundations/intro-to-css/05-descendant-combinator/style.css
@@ -1,6 +1,6 @@
 
 
-.text.container {
+.container .text {
 
     background-color: yellow;
     color: red;
